--- a/recipe-hub-new.html
+++ b/recipe-hub-new.html
@@ -483,6 +483,107 @@ overflow-x: hidden;
                   </div>
                 </div>
               </div>
+              <!--Lunch-->
+              <div class="accordion style-1">
+                <div data-w-id="73061464-46e8-2753-1baa-b5b9729db72b" class="accordion-header">
+                  <div class="accordion-header-text">
+                    <div class="accordion-header-top-content">
+                      <h2 class="main-heading-style-1">Lunch</h2>
+                      <div class="accordion-header-arrow">
+                        <div class="accordion-arrow-icon"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-body style-1">
+                 <div class="dynamic_show">
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[0].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[0]?.Images[0]?.url || Lunch[0]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[0].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[0].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[0].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[0].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[1].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[1]?.Images[0]?.url || Lunch[1]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[1].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[1].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[1].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[1].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[2].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[2]?.Images[0]?.url || Lunch[2]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[2].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[2].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[2].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[2].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[3].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[3]?.Images[0]?.url || Lunch[3]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[3].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[3].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[3].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[3].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[4].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[4]?.Images[0]?.url || Lunch[4]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[4].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[4].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[4].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[4].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[5].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[5]?.Images[0]?.url || Lunch[5]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[5].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[5].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[5].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[5].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Lunch[6].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Lunch[6]?.Images[0]?.url || Lunch[6]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Lunch[6].Name}}</h2>
+                          <div class="generic-text-style-1">{{Lunch[6].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Lunch[6].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Lunch[6].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                  </div>
+                </div>
+              </div>
               <!--Dinner-->
               <div class="accordion style-1">
                 <div data-w-id="73061464-46e8-2753-1baa-b5b9729db72b" class="accordion-header">
@@ -578,6 +679,107 @@ overflow-x: hidden;
                           <div class="generic-text-style-1 filter">{{Dinner[6].Dietary_Require}}</div>
                         </div>
                         <div v-show="typeActive">{{Dinner[6].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                  </div>
+                </div>
+              </div>
+              <!--Snacks-->
+              <div class="accordion style-1">
+                <div data-w-id="73061464-46e8-2753-1baa-b5b9729db72b" class="accordion-header">
+                  <div class="accordion-header-text">
+                    <div class="accordion-header-top-content">
+                      <h2 class="main-heading-style-1">Snacks</h2>
+                      <div class="accordion-header-arrow">
+                        <div class="accordion-arrow-icon"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-body style-1">
+                 <div class="dynamic_show">
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[0].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[0]?.Images[0]?.url || Snacks[0]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[0].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[0].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[0].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[0].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[1].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[1]?.Images[0]?.url || Snacks[1]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[1].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[1].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[1].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[1].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[2].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[2]?.Images[0]?.url || Snacks[2]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[2].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[2].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[2].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[2].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[3].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[3]?.Images[0]?.url || Snacks[3]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[3].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[3].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[3].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[3].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[4].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[4]?.Images[0]?.url || Snacks[4]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[4].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[4].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[4].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[4].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[5].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[5]?.Images[0]?.url || Snacks[5]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[5].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[5].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[5].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[5].type}}</div>
+                      </div>
+                    </a>
+                    <!---->
+                    <a v-bind:href="`/recipe.html?recipe=${Snacks[6].ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="eager" v-bind:srcset="`${Snacks[6]?.Images[0]?.url || Snacks[6]?.Images?.url}`" alt="" class="full_thumbnail"></div>
+                      <div class="capsule-header-content">
+                        <div class="capsule-header-text">
+                          <h2 class="main-heading-style-1">{{Snacks[6].Name}}</h2>
+                          <div class="generic-text-style-1">{{Snacks[6].Time}}</div>
+                          <div class="generic-text-style-1 filter">{{Snacks[6].Dietary_Require}}</div>
+                        </div>
+                        <div v-show="typeActive">{{Snacks[6].type}}</div>
                       </div>
                     </a>
                     <!---->
