--- a/testsubscription.html
+++ b/testsubscription.html
@@ -336,6 +336,6 @@
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script src="js/other/checkSubscription.js" type="text/javascript"></script>
+  <script src="js/user/userAuth.js" type="text/javascript"></script>
 </body>
 </html>
