Updates added subscription gate.
This will prevent any users who don't have an active subscription from accessing the content.

--- a/guides.html
+++ b/guides.html
@@ -355,5 +355,6 @@ align-items: center;
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/guides/guides.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
