--- a/preferences.html
+++ b/preferences.html
@@ -430,5 +430,6 @@ overflow-x: hidden;
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/other/audio-controls.js" type="text/javascript"></script>
   <script src="js/user/preferences.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
