--- a/program-hub-welcome.html
+++ b/program-hub-welcome.html
@@ -328,5 +328,6 @@ overflow-x: hidden;
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/programs/program-hub-welcome.js"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
