--- a/support.html
+++ b/support.html
@@ -422,5 +422,6 @@ overflow-x: hidden;
     });
 setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 2000);
 </script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
