--- a/account.html
+++ b/account.html
@@ -468,5 +468,6 @@ overflow-x: hidden;
         });
     setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 2000);
   </script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
