--- a/blog.html
+++ b/blog.html
@@ -459,5 +459,6 @@ window.onload = async () => {
     setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 2000);
 };
 </script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
