--- a/program-hub.html
+++ b/program-hub.html
@@ -438,5 +438,6 @@
   <script src="js/other/misc.js" type="text/javascript"></script>
   <!--<script src="js/user/userAuth.js" type="text/javascript"></script>-->
   <script src="js/programs/program-hub.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
