--- a/program-selection.html
+++ b/program-selection.html
@@ -403,5 +403,6 @@ overflow-x: hidden;
   <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/programs/program-selection.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
