--- a/recovery-overview.html
+++ b/recovery-overview.html
@@ -564,5 +564,6 @@ overflow-x: hidden;
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/recoveries/recovery-overview.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
