--- a/tutorial.html
+++ b/tutorial.html
@@ -414,5 +414,6 @@ overflow-x: hidden;
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="/js/tutorials/tutorial.js"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
