--- a/workout-library.html
+++ b/workout-library.html
@@ -480,5 +480,6 @@ c0-0.1,0-0.2,0-0.3L1.8,14C0.7,12.5,0,10.7,0,8.8C0,3.9,4.2,0,9.4,0s9.4,3.9,9.4,8.
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/workouts/workout-library.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
