--- a/workout-overview.html
+++ b/workout-overview.html
@@ -627,5 +627,6 @@ overflow-x: hidden;
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/workouts/workout-overview.js" type="text/javascript"></script>
+<script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
