--- a/recipe.html
+++ b/recipe.html
@@ -515,119 +515,7 @@ overflow-x: hidden;
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <!--<script src="js/recipes/recipe.js" type="text/javascript"></script>-->
-  <script>
-    anime({
-  targets: '.path3',
-  strokeDashoffset: [anime.setDashoffset, 0],
-  easing: 'cubicBezier(.5, .05, .1, .3)',
-  duration: 2000,
-  delay: function(el, i) { return i * 250 },
-  direction: 'alternate',
-  loop: true
-});
-
-window.onload = async () => {
-  console.log("Window loaded");
-  if (typeof Wized === "undefined") {
-    console.error("Wized is not loaded");
-  }
-  
-  
-  // Get the current URL's query string
-
-  const favouriteBtn1 = document.getElementById("favourite-button1");
-  const favouriteBtn2 = document.getElementById("favourite-button2");
-  const favouriteBtn3 = document.getElementById("favourite-button3");
-  const addedRecipe = document.getElementById("addedRecipe");
-  Wized.request.await("Load Users Recipe", (response) => {
-    if (!response || response.status !== 200) {
-      console.error("Error fetching user recipe data:", response);
-      return;
-    }
-    else {
-
-    
-    const user = response.data.Favourites_ID;
-    const snapshot = response.data;
-    if (snapshot.Stripe == "Not Verified") {
-      window.location.href = "/program-selection";
-    }
-    let params = window.location.href;
-    let url = new URL(params);
-    let checkurl = url.searchParams;
-    favouriteBtn1.addEventListener("click", () => {
-      favouriteBtn1.style.display = "none";
-      favouriteBtn2.style.display = "none";
-      favouriteBtn3.style.display = "none";
-      addedRecipe.click();
-    });
-    favouriteBtn2.addEventListener("click", () => {
-      favouriteBtn1.style.display = "none";
-      favouriteBtn2.style.display = "none";
-      favouriteBtn3.style.display = "none";
-      addedRecipe.click();
-    });
-    favouriteBtn3.addEventListener("click", () => {
-      favouriteBtn1.style.display = "none";
-      favouriteBtn2.style.display = "none";
-      favouriteBtn3.style.display = "none";
-      addedRecipe.click();
-    });
-    let currentRecipe = checkurl.get("recipe");
-    if (user.includes(currentRecipe)) {
-      favouriteBtn1.style.display = "none";
-      favouriteBtn2.style.display = "none";
-      favouriteBtn3.style.display = "none";
-    }
-  }
-  });
-
-  Wized.request.await("Load Recipe", (response) => {
-    const snapshot = response.data;
-    let method = snapshot.Method;
-    let Ingredients = snapshot.Ingredients;
-    const methodText = document.getElementById("method");
-    const ingredientsText = document.getElementById("ingredients");
-    const foodInfo = snapshot.Food_Info;
-    let foodInfoCol = foodInfo.split("," + "\n");
-    //setTimeout(RecipeInfo, 500);
-    if (response.status == 200) {
-      let stop = setTimeout(RecipeInfo, 1000);
-      document.title = snapshot.Name;
-      var converter = new showdown.Converter(),
-        text = Ingredients,
-        html = converter.makeHtml(text);
-      ingredientsText.innerHTML = html;
-      var converter = new showdown.Converter(),
-        text = method,
-        html = converter.makeHtml(text);
-      methodText.innerHTML = html;
-    }
-    function RecipeInfo() {
-      let time = document.querySelectorAll(".recipe-info");
-      let heroTime = document.getElementById("recipe_time");
-      heroTime.innerHTML = foodInfoCol[0];
-      //let time = document.getElementById("time");
-      //let serves = document.getElementById("serves");
-      //let calories = document.getElementById("calories");
-      //let carbohydrate = document.getElementById("carbohydrate");
-      //let fatTotal = document.getElementById("fatTotal");
-      //let protein = document.getElementById("protein");
-      for (let i = 0; i < time.length; i++) {
-        time[i].innerHTML = foodInfoCol[i];
-        //serves.innerHTML = foodInfoCol[i]
-        //calories.innerHTML = foodInfoCol[i]
-        //carbohydrate.innerHTML = foodInfoCol[i]
-        //fatTotal.innerHTML = foodInfoCol[i]
-        //protein.innerHTML = foodInfoCol[i]
-      }
-      clearTimeout(stop);
-    }
-  });
-  setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 4000);
-};
-  </script>
+  <script src="js/recipes/recipe.js" type="text/javascript"></script>
   <script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
