--- a/guides.html
+++ b/guides.html
@@ -303,17 +303,17 @@ align-items: center;
           <div class="content slider-content">
             <div class="guide-slider">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div w-el="guide_slide" class="swiper-slide">
                   <div class="slide-content">
-                    <div  class="guide-slider-image"></div>
+                    <div w-el="guide_image" class="guide-slider-image"></div>
                     <div class="guide-slider-body flex">
                       <div class="guide-content">
                         <div class="content-headings">
                           <h1 class="generic-text-style-1">Topic</h1>
-                          <h2  class="main-heading-style-1 slide-heading">Guide Title</h2>
+                          <h2 w-el="guide_title" class="main-heading-style-1 slide-heading">Guide Title</h2>
                         </div>
                         <div class="content-body">
-                          <p class="body-copy-text-style-1 slide-body-copy">A. When signals are on you will hear siren count downs and a half way warnings throughout the workout. This can be changed at any point during the exercise.</p>
+                          <p w-el="guide_description" class="body-copy-text-style-1 slide-body-copy">A. When signals are on you will hear siren count downs and a half way warnings throughout the workout. This can be changed at any point during the exercise.</p>
                         </div>
                       </div>
                     </div>
